--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - RATE_LIMITER_CHANNEL_NAME=Notification.Service.Rate.Limiter
     depends_on:
       - postgres_server
+      - nats-streaming-server
     ports:
       - 8080:8080
     network_mode: 'host'
