--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     depends_on:
       - postgres_server
       - nats-streaming-server
+    restart: on-failure:10
     ports:
       - 8080:8080
     network_mode: 'host'
